# rail_velodyne

./: README.md
fetch_velodyne/: CMakeLists.txt  package.xml
fetch_velodyne/hardware/: battery_mount.SLDPRT  battery_mount.STL  vlp16_mount_base.SLDPRT  vlp16_mount_pan.SLDPRT  vlp16_mount_pan.STL  vlp16_mount_tilt.SLDPRT  vlp16_mount_tilt.STL
fetch_velodyne/launch/: playground.launch  robot_velodyne.launch  simulation.launch
fetch_velodyne/launch/include/: fetch_velodyne.launch.xml
fetch_velodyne/robots/: fetch_velodyne.gazebo.xacro  fetch_velodyne.urdf
fetch_velodyne/sensors/: VLP-16.urdf.xacro
velodyne_pointcloud/launch/: VLP16_points.launch  cloud_nodelet.launch  laserscan_nodelet.launch
